# ddos_analysis

./: .gitignore  coap_analysis.ipynb  coap_analysis.py  ddos_analyse.ipynb  ddos_data_analysis.ipynb  general_analysis.ipynb  merge_parquets.py  notes.typ  parquets_to_big_parquet.py  pcap_to_parquet.py  process_folder.sh  project.ipynb  project.md  pyproject.toml
presentation/: literature.bib  nsm_presentation_sebrantke.typ  presentation.typ
