[project]
name = "ddos-analysis"
version = "0.1.0"
description = "DDoS-Trace-Analyse-Pipeline (CoAP-Amplification, PCAP -> Parquet)"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "polars-lts-cpu>=1.0.0",
    "pyarrow>=25.0.0",
]

[tool.uv]
package = false
